# kasku

./: .gitignore  README.md
kasku-backend-monolith/: Cargo.toml
kasku-backend-monolith/migrations/: 20260001_shared_infra.sql  20260002_auth_schema.sql  20260003_user_schema.sql  20260004_billing_schema.sql  20260005_notification_schema.sql  20260006_admin_schema.sql  20260007_price_schema.sql  20260008_provision_tenant_fn.sql  20260009_monolith_db_role.sql
kasku-backend-monolith/src/: app_error.rs  app_state.rs  config.rs  main.rs  router.rs
kasku-backend-monolith/src/modules/: mod.rs
kasku-backend-monolith/src/modules/admin/: mod.rs
kasku-backend-monolith/src/modules/admin/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/admin/domain/: entity.rs  error.rs  repository.rs
kasku-backend-monolith/src/modules/admin/infrastructure/: admin_user_repo.rs  audit_repo.rs  mod.rs  user_read_repo.rs
kasku-backend-monolith/src/modules/admin/usecase/: mod.rs
kasku-backend-monolith/src/modules/auth/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/auth/domain/: entity.rs  error.rs  repository.rs
kasku-backend-monolith/src/modules/auth/infrastructure/: email_verification_repo.rs  mod.rs  password_reset_repo.rs  refresh_token_repo.rs  user_repo.rs
kasku-backend-monolith/src/modules/auth/usecase/: change_password.rs  cleanup.rs  forgot_password.rs  helpers.rs  login.rs  logout.rs  mod.rs  refresh_token.rs  register.rs  resend_verification.rs  reset_password.rs  verify_email.rs
kasku-backend-monolith/src/modules/billing/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/billing/domain/: entity.rs  error.rs  repository.rs
kasku-backend-monolith/src/modules/billing/infrastructure/: mod.rs  payment_repo.rs  plan_repo.rs  subscription_repo.rs
kasku-backend-monolith/src/modules/billing/usecase/: cancel_subscription.rs  create_payment.rs  expire_subscriptions.rs  get_subscription.rs  get_tier_limits.rs  handle_webhook.rs  list_plans.rs  mod.rs
kasku-backend-monolith/src/modules/finance/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/finance/domain/: entity.rs  error.rs  repository.rs
kasku-backend-monolith/src/modules/finance/infrastructure/: account_repo.rs
kasku-backend-monolith/src/modules/finance/usecase/: mod.rs
kasku-backend-monolith/src/modules/investment/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/investment/domain/: entity.rs  error.rs  repository.rs
kasku-backend-monolith/src/modules/investment/infrastructure/: asset_repo.rs  mod.rs
kasku-backend-monolith/src/modules/investment/usecase/: mod.rs
kasku-backend-monolith/src/modules/notification/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/notification/domain/: entity.rs  error.rs  repository.rs
kasku-backend-monolith/src/modules/notification/infrastructure/: consumer.rs  mod.rs  preference_repo.rs  smtp_sender.rs  templates.rs
kasku-backend-monolith/src/modules/notification/usecase/: mod.rs
kasku-backend-monolith/src/modules/price/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/price/domain/: entity.rs  error.rs
kasku-backend-monolith/src/modules/price/infrastructure/: mod.rs  repository.rs
kasku-backend-monolith/src/modules/price/usecase/: fetch_external.rs  get_price.rs  mod.rs  scheduler.rs
kasku-backend-monolith/src/modules/sync/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/sync/domain/: error.rs
kasku-backend-monolith/src/modules/sync/infrastructure/: mod.rs  repository.rs
kasku-backend-monolith/src/modules/sync/usecase/: mod.rs  pull_sync.rs  push_sync.rs
kasku-backend-monolith/src/modules/transaction/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/transaction/domain/: entity.rs  error.rs  repository.rs
kasku-backend-monolith/src/modules/transaction/infrastructure/: budget_repo.rs  category_repo.rs  mod.rs  transaction_repo.rs
kasku-backend-monolith/src/modules/transaction/usecase/: mod.rs
kasku-backend-monolith/src/modules/user/delivery/: dto.rs  handler.rs  router.rs
kasku-backend-monolith/src/modules/user/domain/: entity.rs  error.rs  repository.rs
kasku-backend-monolith/src/modules/user/infrastructure/: profile_repo.rs
kasku-backend-monolith/src/modules/user/usecase/: get_profile.rs  (+2 more)
kasku-backend-monolith/src/shared/: db.rs  messaging.rs  mod.rs  outbox.rs  redis.rs  response.rs  tenant.rs
kasku-backend-monolith/src/shared/middleware/: admin_auth.rs  auth.rs  mod.rs  rate_limit.rs  tenant_inject.rs  tier_inject.rs
kasku-backend-monolith/templates/: email_verification.html  email_verification_resent.html  password_reset.html  payment_failed.html  payment_success.html  subscription_cancelled.html  subscription_expired.html  subscription_expiring.html
kasku-backend/price-service/: Cargo.toml  Dockerfile  Makefile  build.rs
kasku-backend/price-service/migrations/: 001_create_price_cache.sql
kasku-backend/price-service/src/: config.rs  main.rs
kasku-backend/price-service/src/delivery/: grpc_handler.rs  http_handler.rs
kasku-backend/price-service/src/domain/: entity.rs  error.rs
kasku-backend/price-service/src/infrastructure/: db.rs  repository.rs
kasku-backend/price-service/src/proto_gen/: mod.rs
kasku-backend/price-service/src/usecase/: fetch_external.rs  get_price.rs  mod.rs
kasku-backend/sync-service/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
kasku-backend/sync-service/migrations/: 20260519000001_create_sync_service_version.sql
kasku-backend/sync-service/src/: config.rs  main.rs
kasku-backend/sync-service/src/delivery/: http_handler.rs
kasku-backend/sync-service/src/domain/: entity.rs  error.rs
kasku-backend/sync-service/src/infrastructure/: db.rs  mod.rs  repository.rs  tenant.rs
kasku-backend/sync-service/src/proto/: common.rs  finance.rs  investment.rs  mod.rs  transaction.rs
kasku-backend/sync-service/src/usecase/: mod.rs  pull_sync.rs  push_sync.rs
(+596 files in other folders)
