[package]
name = "kasku-backend-monolith"
version = "1.0.0"
edition = "2021"
authors = ["TubsAMY <admin@tubsamy.tech>"]

[[bin]]
name = "kasku"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["macros", "multipart"] }
tokio           = { version = "1", features = ["full"] }
tower           = "0.4"
tower-http      = { version = "0.5", features = ["cors", "trace", "request-id", "compression-gzip"] }

sqlx            = { version = "=0.8.6", default-features = false,
                    features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "json", "migrate", "macros"] }
sqlx-postgres   = { version = "=0.8.6", default-features = false,
                    features = ["uuid", "chrono", "rust_decimal", "json", "migrate"] }

deadpool-redis  = { version = "0.14", features = ["rt_tokio_1"] }
redis           = { version = "0.25", default-features = false, features = ["tokio-comp"] }

lapin           = "2"

reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

argon2          = "0.5"
jsonwebtoken    = "9"
rand            = "0.8"

lettre          = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
tera            = "1"

serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
rust_decimal    = { version = "1", features = ["serde-with-str"] }

envy            = "0.4"
validator       = { version = "0.18", features = ["derive"] }
regex           = "1"

tracing                    = "0.1"
tracing-subscriber         = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry              = { version = "0.26", features = ["trace"] }
opentelemetry_sdk          = { version = "0.26", features = ["rt-tokio", "trace"] }
opentelemetry-otlp         = { version = "0.26", features = ["http-proto", "reqwest-client", "trace"] }
opentelemetry-semantic-conventions = "0.26"
tracing-opentelemetry      = "0.27"

thiserror       = "2"
anyhow          = "1"
url             = "2"

hmac            = "0.12"
sha2            = "0.10"
hex             = "0.4"

csv             = "1"
tokio-util      = { version = "0.7", features = ["full"] }
async-trait     = "0.1"
once_cell       = "1"
base64          = "0.22"
futures-lite    = "2"

[dev-dependencies]
tokio-test      = "0.4"
mockall         = "0.13"
