[package]
name = "sync-service"
version = "1.0.0"
edition = "2021"
authors = ["TubsAMY <admin@tubsamy.tech>"]
description = "KasKu sync-service — Offline sync engine with Server Wins conflict resolution"

[[bin]]
name = "sync-service"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { package = "sqlx-core", version = "=0.8.6", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "uuid", "chrono", "json", "migrate"] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = ["uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
envy = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Regex for tenant schema validation
regex = "1"

# gRPC client (tonic + prost — manual prost structs, no protoc needed)
tonic = { version = "0.12", features = ["transport"] }
prost = "0.14"
http = "1"
